apps/base/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
spec:
  replicas: 0
  selector:
    matchLabels:
      app: it-tools
  template:
    spec:
      containers:
        - name: it-tools
          image: artifactory.local.hejsan.xyz/docker/corentinth/it-tools:2023.12.21-5ed3693
          resources:
            limits:
              memory: 32Mi
              cpu: 100m
            requests:
              memory: 16Mi
              cpu: 10m
