apps/base/it-tools/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`it-tools.local.hejsan.xyz`)
      kind: Rule
      services:
        - name: it-tools
          port: http

  tls:
    secretName: local-hejsan-xyz-tls

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools-external

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`it-tools.hejsan.xyz`)
      kind: Rule
      services:
        - name: it-tools
          port: http

  tls:
    secretName: hejsan-xyz-tls
